# il2Fusion

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/tools/il2fusion/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_hook.cpp
app/src/main/cpp/Dobby/: stub_dobby.cpp
app/src/main/cpp/Dobby/TINYSTL/: tinystl.h  unordered_map.h  vector.h
app/src/main/cpp/il2CppDumper/: hack.cpp  hack.h  il2cpp-class.h  il2cpp_dump.cpp
app/src/main/cpp/plugins/dump/: dump.cpp  dump.h
app/src/main/cpp/plugins/textExtractor/: textExtractor.cpp  textExtractor.h
app/src/main/cpp/utils/: db.cpp  db.h  log.h  utils.cpp  utils.h
app/src/main/java/com/tools/il2fusion/: MainActivity.kt
app/src/main/java/com/tools/il2fusion/config/: ConfigContentProvider.kt  HookConfigRepository.kt  HookConfigStore.kt
app/src/main/java/com/tools/il2fusion/ui/: HookConfigScreen.kt  HookConfigViewModel.kt
app/src/main/java/com/tools/il2fusion/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/tools/il2fusion/utils/: DumpFileParser.kt  RvaUtils.kt
app/src/main/java/com/tools/module/: MainHook.kt  NativeBridge.kt
app/src/main/java/com/tools/textextracttool/: MainActivity.kt
app/src/main/java/com/tools/textextracttool/config/: ConfigContentProvider.kt  HookConfigRepository.kt  HookConfigStore.kt
app/src/main/java/com/tools/textextracttool/ui/: HookConfigScreen.kt  HookConfigViewModel.kt
app/src/main/java/com/tools/textextracttool/utils/: DumpFileParser.kt  RvaUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/tools/il2fusion/: ExampleUnitTest.kt
doc/: README_EN.md
gradle/: libs.versions.toml
